--- a/ipy_readexcel.ipynb
+++ b/ipy_readexcel.ipynb
@@ -596,29 +596,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://pastebin.com/raw/5NHaxyGR 1 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://pastebin.com/raw/5NHaxyGR\n",
-      "http://肥猫.live 2 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=http://肥猫.live\n",
+      "https://pastebin.com/raw/5NHaxyGR 1 正则失败 首次解析状态:200 https://pastebin.com/raw/5NHaxyGR\n",
+      "http://肥猫.live 2 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=http://肥猫.live\n",
       "https://raw.liucn.cc/box/m.json 3 正则失败 首次解析状态:200 https://raw.liucn.cc/box/m.json\n",
       "http://小白.love/ 4 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=http://小白.love/\n",
-      "https://szyyds.cn/tv/x.json 5 正则失败 首次解析状态:200 https://szyyds.cn/tv/x.json\n",
-      "https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json 6 正则失败 首次解析状态:200 https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json\n",
+      "https://szyyds.cn/tv/x.json 5 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://szyyds.cn/tv/x.json\n",
+      "https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json 6 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json\n",
       "http://home.jundie.top:81/top98.json 7 正则失败 首次解析状态:200 http://home.jundie.top:81/top98.json\n",
-      "https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json 8 正则失败 首次解析状态:200 https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json 8 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
       "https://100km.top/0 9 正则失败 首次解析状态:200 https://100km.top/0\n",
       "http://cdn.qiaoji8.com/tvbox.json 10 正则失败 首次解析状态:200 http://cdn.qiaoji8.com/tvbox.json\n",
       "https://la.kstore.space/download/3376/ts.txt 11 正则失败 首次解析状态:200 https://la.kstore.space/download/3376/ts.txt\n",
-      "https://tvbox.wmmys.cn 12 正则失败 首次解析状态:200 https://tvbox.wmmys.cn\n",
+      "https://tvbox.wmmys.cn 12 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tvbox.wmmys.cn\n",
       "https://download.kstore.space/download/4645/Tvbox/myks/99.png 13 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://download.kstore.space/download/4645/Tvbox/myks/99.png\n",
-      "https://chuanshuo.77blog.cn/tv.json 14 正则失败 首次解析状态:200 https://chuanshuo.77blog.cn/tv.json\n",
+      "https://chuanshuo.77blog.cn/tv.json 14 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://chuanshuo.77blog.cn/tv.json\n",
       "https://xhdwc.tk/0 15 正则失败 首次解析状态:200 https://xhdwc.tk/0\n",
-      "https://tv.youdu.fan:666/毒盒影视/ 16 正则失败 首次解析状态:200 https://tv.youdu.fan:666/毒盒影视/\n"
+      "https://tv.youdu.fan:666/毒盒影视/ 16 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/毒盒影视/\n",
+      "https://tv.youdu.fan:666/饭太硬/ 17 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/饭太硬/\n",
+      "https://tv.youdu.fan:666/小米/ 18 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/小米/\n",
+      "https://tv.youdu.fan:666/肥猫/ 19 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/肥猫/\n",
+      "https://tv.youdu.fan:666/cy/ 20 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/cy/\n",
+      "https://tv.youdu.fan:666/PG/ 21 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/PG/\n",
+      "https://tv.youdu.fan:666/香雅情XYQ/ 22 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/香雅情XYQ/\n",
+      "https://tv.youdu.fan:666/南风/ 23 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/南风/\n",
+      "https://tv.youdu.fan:666/骚零/ 24 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/骚零/\n",
+      "https://tv.youdu.fan:666/荷城茶秀/ 25 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/荷城茶秀/\n",
+      "https://tv.youdu.fan:666/短剧频道/ 26 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/短剧频道/\n",
+      "https://tv.youdu.fan:666/少儿频道/ 27 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/少儿频道/\n"
      ]
     }
    ],
@@ -707,7 +718,8 @@
     "        # print(\"=\"*30)\n",
     "\n",
     "i=1\n",
-    "excel_file = r'D:\\OneDrive\\Learn\\pythonLearn\\TvBox\\tvbox\\excel_xianlu.xlsx'\n",
+    "# excel_file = r'D:\\OneDrive\\Learn\\pythonLearn\\TvBox\\tvbox\\excel_xianlu.xlsx' #家里路径\n",
+    "excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_xianlu.xlsx' #公司路径\n",
     "workbook = openpyxl.load_workbook(filename=excel_file)\n",
     "sheet2= workbook['610']\n",
     "for row in sheet2.iter_rows(values_only=True):\n",
