--- a/ipy_test.ipynb
+++ b/ipy_test.ipynb
@@ -411,6 +411,56 @@
     "datah = DelRepeat(datas,'url')\n",
     "print(type(datah))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2024年6月11日11:02:38"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import re\n",
+    "import requests\n",
+    "\n",
+    "def refindvalue(respon): #输入respond,re正则判断单仓多仓，返回cang自定义文本\n",
+    "    try: #正常的操作\n",
+    "        mcang = re.search('sites',respon,re.M|re.I).group(0)\n",
+    "    except :#发生异常，执行这块代码\n",
+    "        try:\n",
+    "            scang = re.search('storeHouse',respon,re.M|re.I).group(0)\n",
+    "        except:#发生异常，执行这块代码\n",
+    "            try:\n",
+    "                xlu = re.search('urls',respon,re.M|re.I).group(0)\n",
+    "            except: #发生异常，执行这块代码\n",
+    "                return \"正则失败\"\n",
+    "            else: #如果没有异常执行这块代码\n",
+    "                return \"H单仓\"\n",
+    "        else:\n",
+    "            return \"H多仓\"\n",
+    "    else:\n",
+    "        return \"H线路\"\n",
+    "\n",
+    "headers={\n",
+    "    \"Cookie\":\"__test=a864654f7055f72f7d6dcb20eebcdd42\",\n",
+    "    \"Host\":\"lige.unaux.com\",\n",
+    "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36\",\n",
+    "    \"Connection\":\"keep-alive\"\n",
+    "    }\n",
+    "\n",
+    "urls=\"https://tv.youdu.fan:666/cy/\"\n",
+    "a = requests.get(url=urls).text\n",
+    "print(a)\n",
+    "print (re.search(\"key\",a))\n",
+    "print (re.search(\"key\",a).group(0))   #123abc456,返回整体\n",
+    "# print (re.search(\"key\",a).group() )  #123\n"
+   ]
   }
  ],
  "metadata": {
