--- a/ipy_readexcel.ipynb
+++ b/ipy_readexcel.ipynb
@@ -629,7 +629,39 @@
       "https://tv.youdu.fan:666/骚零/ 24 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/骚零/\n",
       "https://tv.youdu.fan:666/荷城茶秀/ 25 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/荷城茶秀/\n",
       "https://tv.youdu.fan:666/短剧频道/ 26 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/短剧频道/\n",
-      "https://tv.youdu.fan:666/少儿频道/ 27 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/少儿频道/\n"
+      "https://tv.youdu.fan:666/少儿频道/ 27 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/少儿频道/\n",
+      "https://tv.youdu.fan:666/动漫频道/ 28 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=https://tv.youdu.fan:666/动漫频道/\n",
+      "https://kjsc0310.github.io/tvy/s2.json 29 正则失败 首次解析状态:200 https://kjsc0310.github.io/tvy/s2.json\n",
+      "http://饭太硬.top/tv 30 正则失败 首次解析状态:200 http://饭太硬.top/tv\n",
+      "https://raw.iqiq.io/FongMi/CatVodSpider/main/json/config.json 31 正则失败 首次解析状态:200 https://raw.iqiq.io/FongMi/CatVodSpider/main/json/config.json\n",
+      "http://dxawi.github.io/0/0.json 32 正则失败 首次解析状态:200 http://dxawi.github.io/0/0.json\n",
+      "https://weixine.net/ysc.json 33 正则失败 首次解析状态:200 https://weixine.net/ysc.json\n",
+      "https://raw.iqiq.io//tv-player/tvbox-line/main/tv/fj.json 34 正则失败 首次解析状态:200 https://raw.iqiq.io//tv-player/tvbox-line/main/tv/fj.json\n",
+      "https://raw.iqiq.io/XiaoYiChaHang/tvbox/main/ysj.json 35 正则失败 首次解析状态:200 https://raw.iqiq.io/XiaoYiChaHang/tvbox/main/ysj.json\n",
+      "https://www.lianyingtv.com/fast/fast 36 正则失败 首次解析状态:200 https://www.lianyingtv.com/fast/fast\n",
+      "https://download.kstore.space/download/5206/ZJ1.json 37 正则失败 首次解析状态:200 https://download.kstore.space/download/5206/ZJ1.json\n",
+      "https://download.kstore.space/download/5206/heji3.json 38 正则失败 首次解析状态:200 https://download.kstore.space/download/5206/heji3.json\n",
+      "https://download.kstore.space/download/5206/CCHXJK.json 39 正则失败 首次解析状态:200 https://download.kstore.space/download/5206/CCHXJK.json\n",
+      "https://download.kstore.space/download/5206/订制接口.json 40 正则失败 首次解析状态:200 https://download.kstore.space/download/5206/订制接口.json\n",
+      "https://jihulab.com/a844755785/ts/-/raw/main/shenxian0.json 41 正则失败 首次解析状态:200 https://jihulab.com/a844755785/ts/-/raw/main/shenxian0.json\n",
+      "https://download.kstore.space/download/5206/4Kshijie.json 42 正则失败 首次解析状态:200 https://download.kstore.space/download/5206/4Kshijie.json\n",
+      "https://download.kstore.space/download/5206/家庭接口.json 43 正则失败 首次解析状态:200 https://download.kstore.space/download/5206/家庭接口.json\n",
+      "https://download.kstore.space/download/5206/top98.json 44 正则失败 首次解析状态:200 https://download.kstore.space/download/5206/top98.json\n",
+      "https://download.kstore.space/download/5206/heh.json 45 正则失败 首次解析状态:200 https://download.kstore.space/download/5206/heh.json\n",
+      "https://jihulab.com/xo2/fty/-/raw/main/xo.json 46 正则失败 首次解析状态:200 https://jihulab.com/xo2/fty/-/raw/main/xo.json\n",
+      "http://pandown.pro/tvbox/tvbox.json 47 正则失败 首次解析状态:200 http://pandown.pro/tvbox/tvbox.json\n",
+      "https://pan.shangui.cc/f/EDj3CD/%E5%BF%83%E5%8A%A8%E9%87%87%E9%9B%86.json 48 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://pan.shangui.cc/f/EDj3CD/%E5%BF%83%E5%8A%A8%E9%87%87%E9%9B%86.json\n",
+      "https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json 49 正则失败 首次解析状态:200 https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json\n",
+      "https://download.kstore.space/download/2883/m3u8/dsj/guochan/mp1/1.m3u8 50 正则失败 首次解析状态:200 https://download.kstore.space/download/2883/m3u8/dsj/guochan/mp1/1.m3u8\n",
+      "http://我不是.肥猫.live/接口禁止贩卖 51 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=http://我不是.肥猫.live/接口禁止贩卖\n",
+      "https://cloud.lxweb.cn/f/YxzdI6/xdcj.json 52 正则失败 首次解析状态:200 https://cloud.lxweb.cn/f/YxzdI6/xdcj.json\n",
+      "https://pan.shangui.cc/f/gyVYFV/乌鸦不太黑.json 53 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://pan.shangui.cc/f/gyVYFV/乌鸦不太黑.json\n",
+      "https://gitlab.com/lzc1021lzc/hjfggzs.hjys/-/raw/main/hjys.free.json 54 正则失败 首次解析状态:200 https://gitlab.com/lzc1021lzc/hjfggzs.hjys/-/raw/main/hjys.free.json\n",
+      "https://jihulab.com/xuanzhuapp/xzys/-/raw/main/xzvip.json 55 正则失败 首次解析状态:200 https://jihulab.com/xuanzhuapp/xzys/-/raw/main/xzvip.json\n",
+      "https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json 56 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
+      "https://cf.weixine.net/ysc.json 57 正则失败 首次解析状态:200 https://cf.weixine.net/ysc.json\n",
+      "https://raw.iqiq.io/liu673cn/box/main/m.json 58 正则失败 首次解析状态:200 https://raw.iqiq.io/liu673cn/box/main/m.json\n",
+      "https://atomgit.com/dwc8/12/raw/master/dc.json\\n 59 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://atomgit.com/dwc8/12/raw/master/dc.json\\n\n"
      ]
     }
    ],
