--- a/ipy_readexcel.ipynb
+++ b/ipy_readexcel.ipynb
@@ -661,7 +661,12 @@
       "https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json 56 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
       "https://cf.weixine.net/ysc.json 57 正则失败 首次解析状态:200 https://cf.weixine.net/ysc.json\n",
       "https://raw.iqiq.io/liu673cn/box/main/m.json 58 正则失败 首次解析状态:200 https://raw.iqiq.io/liu673cn/box/main/m.json\n",
-      "https://atomgit.com/dwc8/12/raw/master/dc.json\\n 59 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://atomgit.com/dwc8/12/raw/master/dc.json\\n\n"
+      "https://atomgit.com/dwc8/12/raw/master/dc.json\\n 59 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://atomgit.com/dwc8/12/raw/master/dc.json\\n\n",
+      "http://xhww.fun:63/小米/DEMO.json 60 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=http://xhww.fun:63/小米/DEMO.json\n",
+      "http://rihou.cc:88/荷城茶秀 61 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=http://rihou.cc:88/荷城茶秀\n",
+      "https://mirror.ghproxy.com/https://raw.githubusercontent.com/lm317379829/PyramidStore/pyramid/py.json 62 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://mirror.ghproxy.com/https://raw.githubusercontent.com/lm317379829/PyramidStore/pyramid/py.json\n",
+      "https://cn.kstore.space/download/2883/0110.txt 63 正则失败 首次解析状态:200 https://cn.kstore.space/download/2883/0110.txt\n",
+      "http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&123&b=欧歌 64 正则失败 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&123&b=欧歌\n"
      ]
     }
    ],
