--- a/ipy_readexcel.ipynb
+++ b/ipy_readexcel.ipynb
@@ -666,7 +666,13 @@
       "http://rihou.cc:88/荷城茶秀 61 正则失败 代理2网址状态: 200 http://lige.unaux.com/?url=http://rihou.cc:88/荷城茶秀\n",
       "https://mirror.ghproxy.com/https://raw.githubusercontent.com/lm317379829/PyramidStore/pyramid/py.json 62 正则失败 代理1网址状态: 200 http://lige.unaux.com/?url=https://mirror.ghproxy.com/https://raw.githubusercontent.com/lm317379829/PyramidStore/pyramid/py.json\n",
       "https://cn.kstore.space/download/2883/0110.txt 63 正则失败 首次解析状态:200 https://cn.kstore.space/download/2883/0110.txt\n",
-      "http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&123&b=欧歌 64 正则失败 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&123&b=欧歌\n"
+      "http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&123&b=欧歌 64 正则失败 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&123&b=欧歌\n",
+      "http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=all&jar=all&b=欧歌 65 正则失败 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=all&jar=all&b=欧歌\n",
+      "http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=a3&jar=a3&b=欧歌 66 正则失败 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=a3&jar=a3&b=欧歌\n",
+      "http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&321&b=欧歌 67 正则失败 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&321&b=欧歌\n",
+      "https://download.kstore.space/download/2883/nzk/nzk0722.json 68 正则失败 首次解析状态:200 https://download.kstore.space/download/2883/nzk/nzk0722.json\n",
+      "https://jihulab.com/okcaptain/kko/-/raw/main/tv.txt 69 正则失败 首次解析状态:200 https://jihulab.com/okcaptain/kko/-/raw/main/tv.txt\n",
+      "https://盒子迷.top/禁止贩卖 70 正则失败 首次解析状态:200 https://盒子迷.top/禁止贩卖\n"
      ]
     }
    ],
