--- a/ipy_test.ipynb
+++ b/ipy_test.ipynb
@@ -421,9 +421,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H线路\n",
+      "<re.Match object; span=(130, 133), match='key'>\n",
+      "key\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "import re\n",
@@ -454,12 +464,72 @@
     "    \"Connection\":\"keep-alive\"\n",
     "    }\n",
     "\n",
-    "urls=\"https://tv.youdu.fan:666/cy/\"\n",
-    "a = requests.get(url=urls).text\n",
-    "print(a)\n",
+    "url1=\"https://tv.youdu.fan:666/cy/\"\n",
+    "url2=\"https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/a.txt?ref=main\"\n",
+    "url3=\"https://pastebin.com/raw/5NHaxyGR\"\n",
+    "a = requests.get(url=url3).text\n",
+    "# print(a)\n",
+    "print(refindvalue(a))\n",
     "print (re.search(\"key\",a))\n",
     "print (re.search(\"key\",a).group(0))   #123abc456,返回整体\n",
-    "# print (re.search(\"key\",a).group() )  #123\n"
+    "# print (re.search(\"key\",a,re.M|re.I).group() )  #123\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "111sites\n",
+      "H线路\n",
+      "------\n",
+      "sites\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import re,json\n",
+    "import requests\n",
+    "\n",
+    "def respon_out(respon):\n",
+    "    mcang=re.search(\"storeHouse\",respon)\n",
+    "    scang = re.search(\"urls\",respon)\n",
+    "    xlu = re.search(\"sites\",respon)\n",
+    "    \n",
+    "    if xlu is not None:\n",
+    "        print(\"111\"+xlu.group())\n",
+    "        return \"H线路\"\n",
+    "    elif xlu is  None and scang is not None and mcang is None:\n",
+    "        print(\"121\"+scang.group())\n",
+    "        return \"H单仓\"\n",
+    "    elif xlu is  None and scang is  None and mcang is not None:\n",
+    "        print(\"131\"+mcang.group())\n",
+    "        return \"H多仓\"\n",
+    "    else :\n",
+    "        print(mcang,scang,xlu)\n",
+    "        return \"other\"\n",
+    "\n",
+    "headers={\n",
+    "    \"Cookie\":\"__test=a864654f7055f72f7d6dcb20eebcdd42\",\n",
+    "    \"Host\":\"lige.unaux.com\",\n",
+    "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36\",\n",
+    "    \"Connection\":\"keep-alive\"\n",
+    "    }\n",
+    "\n",
+    "url1=\"https://tv.youdu.fan:666/cy/\"\n",
+    "url2=\"https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/a.txt?ref=main\"\n",
+    "url3=\"http://home.jundie.top:81/top98.json\"\n",
+    "a = requests.get(url=url3).text\n",
+    "print(type(a))\n",
+    "print(respon_out(a)+\"\\n------\")\n",
+    "print (re.search(\"sites\",a).group())\n",
+    "\n"
    ]
   }
  ],
