--- a/ipy_test.ipynb
+++ b/ipy_test.ipynb
@@ -484,11 +484,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n",
-      "111sites\n",
-      "H线路\n",
-      "------\n",
-      "sites\n"
+      "\n"
      ]
     }
    ],
@@ -515,20 +511,27 @@
     "        print(mcang,scang,xlu)\n",
     "        return \"other\"\n",
     "\n",
-    "headers={\n",
-    "    \"Cookie\":\"__test=a864654f7055f72f7d6dcb20eebcdd42\",\n",
-    "    \"Host\":\"lige.unaux.com\",\n",
+    "headerss={\n",
+    "    # \":authority\":\"xn--sss604efuw.com\",\n",
+    "    # \":path\":\"/jm/jiemi.php?\",\n",
+    "    # \":scheme\":\"https\",\n",
     "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36\",\n",
-    "    \"Connection\":\"keep-alive\"\n",
+    "    \"Connection\":\"keep-alive\",\n",
+    "    \"Accept\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/116.0.0.0 Safari/537.36 Edg/116.0.1938.69\",\n",
+    "    \"Upgrade-Insecure-Requests\":\"1\",\n",
+    "    \"Accept-Encoding\":\"gzip, deflate\"\n",
     "    }\n",
     "\n",
     "url1=\"https://tv.youdu.fan:666/cy/\"\n",
     "url2=\"https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/a.txt?ref=main\"\n",
     "url3=\"http://home.jundie.top:81/top98.json\"\n",
-    "a = requests.get(url=url3).text\n",
-    "print(type(a))\n",
-    "print(respon_out(a)+\"\\n------\")\n",
-    "print (re.search(\"sites\",a).group())\n",
+    "url4=\"http://rihou.vip:88/荷城茶秀\"\n",
+    "url5=\"https://xn--sss604efuw.com/jm/jiemi.php?url=http%3A%2F%2Frihou.vip%3A88%2F%E8%8D%B7%E5%9F%8E%E8%8C%B6%E7%A7%80&i=1\"\n",
+    "url6=\"https://gitlab.com/lzc1021lzc/hjfggzs.hjys/-/raw/main/hjys.free.json\"\n",
+    "a = requests.get(url=url6,headers=headerss).text\n",
+    "print(a)\n",
+    "# print(respon_out(a)+\"\\n------\")\n",
+    "# print (re.search(\"sites\",a).group())\n",
     "\n"
    ]
   }
