--- a/ipy_readexcel.ipynb
+++ b/ipy_readexcel.ipynb
@@ -1318,6 +1318,269 @@
     "    i=i+1\n",
     "workbook.save(filename = \"excel_0611pm.xlsx\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 20240613 pm  \"User-Agent\": \"okhttp/4.1.0\" 取代代理链接\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H线路 首次解析状态:200 https://pastebin.com/raw/5NHaxyGR\n",
+      "other 代理网址状态: 200 http://肥猫.live\n",
+      "H线路 首次解析状态:200 https://raw.liucn.cc/box/m.json\n",
+      "other 代理网址状态: 200 http://小白.love/\n",
+      "H线路 首次解析状态:200 https://szyyds.cn/tv/x.json\n",
+      "H线路 首次解析状态:200 https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json\n",
+      "H线路 首次解析状态:200 http://home.jundie.top:81/top98.json\n",
+      "H线路 首次解析状态:200 https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "H线路 首次解析状态:200 https://100km.top/0\n",
+      "H线路 首次解析状态:200 http://cdn.qiaoji8.com/tvbox.json\n",
+      "H线路 首次解析状态:200 https://la.kstore.space/download/3376/ts.txt\n",
+      "other 首次解析状态:200 https://tvbox.wmmys.cn\n",
+      "other 更换UA状态: 404 https://download.kstore.space/download/4645/Tvbox/myks/99.png\n",
+      "H线路 首次解析状态:200 https://chuanshuo.77blog.cn/tv.json\n",
+      "H线路 首次解析状态:200 https://xhdwc.tk/0\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/毒盒影视/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/饭太硬/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/小米/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/肥猫/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/cy/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/PG/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/香雅情XYQ/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/南风/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/骚零/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/荷城茶秀/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/短剧频道/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/少儿频道/\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/动漫频道/\n",
+      "H线路 首次解析状态:200 https://kjsc0310.github.io/tvy/s2.json\n",
+      "other 首次解析状态:200 http://饭太硬.top/tv\n",
+      "other 首次解析状态:200 https://raw.iqiq.io/FongMi/CatVodSpider/main/json/config.json\n",
+      "H线路 首次解析状态:200 http://dxawi.github.io/0/0.json\n",
+      "H线路 首次解析状态:200 https://weixine.net/ysc.json\n",
+      "other 首次解析状态:200 https://raw.iqiq.io//tv-player/tvbox-line/main/tv/fj.json\n",
+      "other 首次解析状态:200 https://raw.iqiq.io/XiaoYiChaHang/tvbox/main/ysj.json\n",
+      "H线路 首次解析状态:200 https://www.lianyingtv.com/fast/fast\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/5206/ZJ1.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/5206/heji3.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/5206/CCHXJK.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/5206/订制接口.json\n",
+      "H线路 首次解析状态:200 https://jihulab.com/a844755785/ts/-/raw/main/shenxian0.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/5206/4Kshijie.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/5206/家庭接口.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/5206/top98.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/5206/heh.json\n",
+      "H线路 首次解析状态:200 https://jihulab.com/xo2/fty/-/raw/main/xo.json\n",
+      "H线路 首次解析状态:200 http://pandown.pro/tvbox/tvbox.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/EDj3CD/%E5%BF%83%E5%8A%A8%E9%87%87%E9%9B%86.json\n",
+      "H线路 首次解析状态:200 https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/2883/m3u8/dsj/guochan/mp1/1.m3u8\n",
+      "other 代理网址状态: 200 http://我不是.肥猫.live/接口禁止贩卖\n",
+      "other 首次解析状态:200 https://cloud.lxweb.cn/f/YxzdI6/xdcj.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/gyVYFV/乌鸦不太黑.json\n",
+      "other 首次解析状态:200 https://gitlab.com/lzc1021lzc/hjfggzs.hjys/-/raw/main/hjys.free.json\n",
+      "H线路 首次解析状态:200 https://jihulab.com/xuanzhuapp/xzys/-/raw/main/xzvip.json\n",
+      "H线路 首次解析状态:200 https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
+      "H线路 首次解析状态:200 https://cf.weixine.net/ysc.json\n",
+      "other 首次解析状态:200 https://raw.iqiq.io/liu673cn/box/main/m.json\n",
+      "other 更换UA状态: 400 https://atomgit.com/dwc8/12/raw/master/dc.json\\n\n",
+      "other 代理网址状态: 200 http://xhww.fun:63/小米/DEMO.json\n",
+      "other 首次解析状态:200 http://rihou.cc:88/荷城茶秀\n",
+      "other 更换UA状态: 404 https://mirror.ghproxy.com/https://raw.githubusercontent.com/lm317379829/PyramidStore/pyramid/py.json\n",
+      "H线路 首次解析状态:200 https://cn.kstore.space/download/2883/0110.txt\n",
+      "H线路 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&123&b=欧歌\n",
+      "H线路 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=all&jar=all&b=欧歌\n",
+      "H线路 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=a3&jar=a3&b=欧歌\n",
+      "H线路 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&321&b=欧歌\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/2883/nzk/nzk0722.json\n",
+      "other 首次解析状态:200 https://jihulab.com/okcaptain/kko/-/raw/main/tv.txt\n",
+      "H线路 首次解析状态:200 https://盒子迷.top/禁止贩卖\n",
+      "other 代理网址状态: 200 http://152.32.170.60/leevi/PiG/raw/branch/master/jsm.json\n",
+      "other 代理网址状态: 200 http://xn--yety82d.love/\n",
+      "other 首次解析状态:200 http://tvbox.xn--4kq62z5rby2qupq9ub.xyz\n",
+      "other 首次解析状态:200 http://rihou.vip:55/天天开心\n",
+      "H线路 首次解析状态:200 http://我不是.摸鱼儿.top\n",
+      "H线路 首次解析状态:200 http://sinopacifichk.com/box/56.txt\n",
+      "H线路 首次解析状态:200 http://bp.tvbox.cam/\n",
+      "H线路 首次解析状态:200 http://52pan.top:81/api/v3/file/get/174964/%E5%90%BE%E7%88%B1%E8%AF%84%E6%B5%8B.m3u?sign=rPssLoffquDXszCARt6UNF8MobSa1FA27XomzOluJBY%3D%3A0\n",
+      "other 代理网址状态: 200 http://152.32.170.60/Yoursmile7/TVBox/raw/branch/master/XC.json\n",
+      "H线路 首次解析状态:200 http://nxog.eu.org/m/111.php?ou=公众号欧歌app&mz=index&jar=index&1231&b=欧歌\n",
+      "other 首次解析状态:200 http://xhww.fun/小米/DEMO.json\n",
+      "H线路 首次解析状态:200 https://raw.kkgithub.com/liu673cn/box/main/m.json\n",
+      "other 代理网址状态: 200 http://8.210.232.168/xc.json\n",
+      "H线路 首次解析状态:200 https://notabug.org/qizhen15800/My9394/raw/master/ProfessionalEdition.m3u8\n",
+      "other 代理网址状态: 200 http://wl.iptv8.top/wl/a/1706450321.txt\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/0kbjIj/sft%20pl.txt\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/v2Lsk/yyfx.json\n",
+      "H线路 首次解析状态:200 https://gitee.com/tvkj/tw/raw/main/svip.json\n",
+      "H线路 首次解析状态:200 https://gitee.com/tvkj/fl/raw/main/svip.json\n",
+      "H线路 首次解析状态:200 https://gitlab.com/xmbjm/omg/-/raw/main/omg.json\n",
+      "H线路 首次解析状态:200 https://gh-proxy.com/https://raw.githubusercontent.com/gaotianliuyun/gao/master/XYQ.json\n",
+      "H线路 首次解析状态:200 http://120.24.204.74:1888/?explorer/share/file&hash=1277MMs1UITPwRkFSiUwxvFZU1UGQqfXHMnKQHeMcexYxjtYy9tydrVYUbsNkOItAw&name=/æ¥çå¤©ä¸æ°yy.css\n",
+      "H线路 首次解析状态:200 https://notabug.org/qizhen15800/My9394/raw/master/%e4%b8%8d%e8%89%af%e5%b8%85.json\n",
+      "H线路 首次解析状态:200 https://gitee.com/heng546199810/hxvip8/raw/master/hxvip3.txt\n",
+      "H线路 首次解析状态:200 https://gitee.com/hyxuan_admin/xnf/raw/master/xnf.json\n",
+      "H线路 首次解析状态:200 https://gh-proxy.com/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "H线路 首次解析状态:200 https://gh-proxy.com/https://raw.githubusercontent.com/yydfys/yydf/main/yydf/yydfjk.json\n",
+      "H线路 首次解析状态:200 http://39.101.135.137:8080\n",
+      "H线路 首次解析状态:200 https://gitee.com/haohao1992/haohao/raw/master/tvbox/dj.json\n",
+      "H线路 首次解析状态:200 http://61.183.41.92:588/%E5%BD%B1%E8%A7%86/%E9%BC%8E%E7%9B%9BMAX.json\n",
+      "H线路 首次解析状态:200 https://github.moeyy.xyz/https://raw.githubusercontent.com/PizazzGY/TVBox/main/api.json\n",
+      "H线路 首次解析状态:200 https://jihulab.com/blank7355005/box/-/raw/main/0.json\n",
+      "H线路 首次解析状态:200 https://gh.con.sh/https://raw.githubusercontent.com/xnftv/xnf/main/hyxuan.json\n",
+      "H线路 首次解析状态:200 https://raw.gitmirror.com/yw88075/tvbox/main/dr/js.json\n",
+      "H线路 首次解析状态:200 https://www.yingm.cc/dm/dm.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/mPecb/%E9%87%87%E9%9B%86.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/XmzNud/yypd.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/4LBAF0/ali.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/8VDbIo/%E5%B0%91%E5%84%BF%E9%A2%91%E9%81%93.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/vpzxFk/y.txt\n",
+      "H线路 首次解析状态:200 https://files.catbox.moe/pqpbqx.txt\n",
+      "H线路 首次解析状态:200 https://jihulab.com/jinenge/tvbox/-/raw/main/1.json\n",
+      "other 首次解析状态:200 https://gh-proxy.com/https://raw.githubusercontent.com/wnddwc/daiweichun/main/waynfifdwj.json\n",
+      "other 代理网址状态: 200 http://122.51.37.23/man/cally4.xx.json\n",
+      "other 首次解析状态:200 http://xxxoo.shop\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/X23qsd/%E7%9F%AD%E5%89%A7%E5%A4%A7%E8%B5%9B.txt\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/8Qybfo/ssjyz.txt\n",
+      "H线路 首次解析状态:200 https://9xi4o.tk/tvbox.json\n",
+      "H线路 首次解析状态:200 http://www.lyyytv.cn/yt/yt.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/kKGaHR/%E8%9A%82%E8%9A%81%E6%8E%A5%E5%8F%A3.txt\n",
+      "other 首次解析状态:200 https://mirror.ghproxy.com/https://raw.githubusercontent.com/wnddwc/daiweichun/main/waynfifdwj.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/Bq7zTp/%E8%9A%82%E8%9A%81%E6%8E%A5%E5%8F%A32.txt\n",
+      "other 首次解析状态:200 https://ghproxy.liuzhicong.com/https://raw.githubusercontent.com/bestpvp/tm/main/source/stable/main.json\n",
+      "H线路 首次解析状态:200 https://download.kstore.space/download/2883/%E5%BD%B1%E8%A7%86%E4%BB%93.txt\n",
+      "H线路 首次解析状态:200 https://raw.gitmirror.com/yw88075/tvbox/main/XYQTVBox/XYQTVBox.json\n",
+      "other 首次解析状态:200 https://raw.gitmirror.com/guot55/YGBH/main/ygbox.json\n",
+      "H线路 首次解析状态:200 https://tvbox.meitufu.com/TVBox/tv.json\n",
+      "other 首次解析状态:200 https://raw.iqiq.io/Yosakoii/Yosakoii.github.io/main/2023.json\n",
+      "other 首次解析状态:200 http://ok321.top/ok\n",
+      "H线路 首次解析状态:200 http://bp.tvbox.cam\n",
+      "H线路 首次解析状态:200 http://z.qiqiv.cn/123/258.txt\n",
+      "H线路 首次解析状态:200 http://z.qiqiv.cn/123/369.txt\n",
+      "H线路 首次解析状态:200 http://154.3.2.66:8889/down/BAKg7N5hiyU9.txt\n",
+      "H线路 首次解析状态:200 http://154.3.2.66:8889/down/jTtX6fos6Fpg.txt\n",
+      "H线路 首次解析状态:200 http://154.3.2.193:8889/down/iLVFw1kO0rPJ.json\n",
+      "other 代理网址状态: 200 http://肥猫.live/\n",
+      "H线路 首次解析状态:200 https://la.kstore.space/download/2883/0110.txt\n",
+      "H线路 首次解析状态:200 https://jihulab.com/546199810/hx/-/raw/main/hxzx.txt?ref_type=heads\n",
+      "H线路 首次解析状态:200 https://jihulab.com/546199810/hx/-/raw/main/qb4k.txt\n",
+      "other 首次解析状态:200 https://wds.ecsxs.com:443/230989.json\n",
+      "H线路 首次解析状态:200 https://jihulab.com/yw88075/tvbox/-/raw/main/yw.json\n",
+      "other 首次解析状态:200 http://rihou.vip:88/荷城茶秀\n",
+      "other 首次解析状态:200 https://gitee.com/haitang123/abc/raw/master/o.bmp\n",
+      "other 首次解析状态:200 https://cloud.lxweb.cn/f/LPmDFD/4k.json\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/w7mnug/tvbox2.json\n",
+      "H线路 首次解析状态:200 https://gitee.com/GK_6_0/json/raw/master/%E5%BF%83%E5%8A%A8%E9%87%87%E9%9B%86(1).json\n",
+      "other 首次解析状态:200 https://api.zalman2022.repl.co/api.json\n",
+      "H线路 首次解析状态:200 https://jihulab.com/jigedos/dym/-/raw/master/master825.json\n",
+      "other 首次解析状态:200 http://itvba.xyz/tv/?need_out_animation=4&amp;finish_when_network_unavailable=false&amp;bdx_monitor_append_params=%7B%22enter_from%22%3A%22im_safe_jump_to_web%22%7D&amp;from_im=true&amp;disable_auto_expose=1&amp;font_sca\n",
+      "other 代理网址状态: 200 https://pan.shangui.cc/f/X23qsd/%E7%9F%AD%E5%89%A7%E5%A4%A7%E8%B5%9B.txt \n",
+      "H线路 首次解析状态:200 https://gitlab.com:443/lzc1021lzc/hjfggzs.hjys/-/raw/main/hjysdb.json\n",
+      "other 代理网址状态: 200 http://xn--5nqxcz3am3cb7e94xzy6aa2935d.xyz:80/xc.json\n",
+      "other 首次解析状态:200 https://jihulab.com/magicbox/boxapi/-/raw/main/fenghe.json\n",
+      "H线路 首次解析状态:200 http://xhztv.top/xhz.json\n",
+      "H线路 首次解析状态:200 http://xhztv.top/4k.json\n",
+      "H线路 首次解析状态:200 https://tv.youdu.fan:666/白嫖/\n",
+      "H线路 首次解析状态:200 https://gitlab.com/xmbjm/vip4K/-/raw/main/4Kvip.json\n",
+      "H线路 首次解析状态:200 https://gitlab.com/xmbjm/zrj/-/raw/main/vip.json\n",
+      "H线路 首次解析状态:200 https://gitlab.com/xmbjm/srpd/-/raw/main/srpd.json\n",
+      "H线路 首次解析状态:200 https://gitlab.com/xmbjm/dc/-/raw/main/T4.json\n",
+      "H线路 首次解析状态:200 http://120.24.204.74:1888/?explorer/share/file&hash=1277MMs1UITPwRkFSiUwxvFZU1UGQqfXHMnKQHeMcexYxjtYy9tydrVYUbsNkOItAw&name=/春盈天下新yy.css\n",
+      "H线路 首次解析状态:200 https://gitlab.com/noimank/tvbox/-/raw/main/tvbox1.json\n",
+      "H线路 首次解析状态:200 https://d.kstore.space/download/6474/tvbox/api.json\n",
+      "other 首次解析状态:200 http://www.饭太硬.top/tv\n",
+      "other 首次解析状态:200 https://mp-064c2f8f-83e1-4bd3-a4a5-103f278b40df.cdn.bspapp.com/cloudstorage/d508ce3e-f916-4f62-b06d-b3d2f12ce130.bmp\n",
+      "other 代理网址状态: 200 http://152.32.170.60/66666/mao/raw/branch/master/00/000.m3u8\n",
+      "other 代理网址状态: 200 http://152.32.170.60/mmmgit/tvbox/raw/branch/main/zzz1.json\n",
+      "other 首次解析状态:200 https://raw.gitcode.com/Xymz/ymz/blobs/3e447ee2b92cbf8282c1648387380768a73efa63/YMZ\n",
+      "other 代理网址状态: 200 http://我不是.肥猫.live\n",
+      "other 代理网址状态: 200 http://xn--5nqxcz3am3cb7e94xzy6aa2935d.xyz/xc.json\n",
+      "other 代理网址状态: 200 http://152.32.170.60/hu/hcr/raw/branch/master/短剧.json\n",
+      "other 代理网址状态: 200 http://152.32.170.60/sejinan/app/raw/branch/box/yu\n",
+      "other 首次解析状态:200 http://rihou.cc:55/天天开心\n",
+      "other 代理网址状态: 200 http://152.32.170.60/895322156/Q/raw/branch/master/TV/jy.txt\n",
+      "other 代理网址状态: 200 http://xktv6.icu/d\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openpyxl\n",
+    "import requests\n",
+    "import json\n",
+    "import re,os\n",
+    "import warnings \n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "def respon_out(respon): #输入respond,判断线路、单仓和多仓\n",
+    "    mcang=re.search(\"storeHouse\",respon,re.M|re.I)\n",
+    "    scang = re.search(\"urls\",respon,re.M|re.I)\n",
+    "    xlu = re.search(\"sites\",respon,re.M|re.I)\n",
+    "    if xlu is not None :\n",
+    "        return \"H线路\"\n",
+    "    elif xlu is  None and scang is not None and mcang is None:\n",
+    "        return \"H单仓\"\n",
+    "    elif xlu is  None and scang is  None and mcang is not None:\n",
+    "        return \"H多仓\"\n",
+    "    else :\n",
+    "        return \"other\"\n",
+    "\n",
+    "def addlink(url): #增加代理链接\n",
+    "    agentlink=\"https://xn--sss604efuw.com/jm/jiemi.php?url=\"\n",
+    "    url1=agentlink+url\n",
+    "    return url1\n",
+    "\n",
+    "def url_respon(url): #输入原始url,解析网站。返回：0-代理url；1-respone等元组；2-状态+200\n",
+    "    headers={\"User-Agent\":\"okhttp/4.1.0\"}\n",
+    "    try:\n",
+    "        respon=requests.get(url,verify=False,timeout =60)\n",
+    "        codema= respon.status_code\n",
+    "        if codema==200:\n",
+    "            conten=\"首次解析状态:\"+str(codema)\n",
+    "            # print(respon.text)\n",
+    "            return url,respon.text,conten\n",
+    "        else:\n",
+    "            respon1=requests.get(url,headers=headers,verify=False,timeout =60)  #更换UA\n",
+    "            codema1= respon1.status_code\n",
+    "            conten1=\"更换UA状态: \"+str(codema1)\n",
+    "            return url,respon1.text,conten1\n",
+    "    except:\n",
+    "        try:\n",
+    "            respon2=requests.get(url=addlink(url),headers=headers,verify=False,timeout =60)  #增加代理2函数\n",
+    "            codema2= respon2.status_code\n",
+    "            conten2=\"代理网址状态: \"+str(codema2)\n",
+    "            return url,respon2.text,conten2\n",
+    "        except:\n",
+    "            return url,\"000\",\"解析失败了: \"\n",
+    "\n",
+    "i=1\n",
+    "# excel_file = r'D:\\OneDrive\\Learn\\pythonLearn\\TvBox\\tvbox\\excel_xianlu.xlsx' #家里路径\n",
+    "excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_xianlu.xlsx' #公司路径\n",
+    "workbook = openpyxl.load_workbook(filename=excel_file)\n",
+    "sheet2= workbook['610']\n",
+    "for row in sheet2.iter_rows(values_only=True):\n",
+    "    if not (row[1]) is None :\n",
+    "        analysis_respone=url_respon(row[1]) \n",
+    "        strtxt=respon_out(analysis_respone[1]) #返回解析结果,如单仓/多仓/失败\n",
+    "        codetxt=analysis_respone[2]  #返回 url的返回状态 如200，400\n",
+    "        sheet2.cell(row = i,column = 4,value = strtxt)\n",
+    "        sheet2.cell(row = i,column = 5,value = codetxt)\n",
+    "        sheet2.cell(row = i,column = 6,value = analysis_respone[0]) #返回代理链接\n",
+    "        print(strtxt,codetxt,row[1])\n",
+    "    else:\n",
+    "        break\n",
+    "    i=i+1\n",
+    "workbook.save(filename = \"excel_0613pm.xlsx\")"
+   ]
   }
  ],
  "metadata": {
