--- a/ipy_readexcel 1120.ipynb
+++ b/ipy_readexcel 1120.ipynb
@@ -135,80 +135,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import openpyxl\n",
-    "import requests\n",
-    "import json\n",
-    "import re,os\n",
-    "import warnings \n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "def respon_out(respon): #输入respond,判断线路、单仓和多仓\n",
-    "    mcang=re.search(\"storeHouse\",respon,re.M|re.I)\n",
-    "    scang = re.search(\"urls\",respon,re.M|re.I)\n",
-    "    xlu = re.search(\"sites\",respon,re.M|re.I)\n",
-    "    if xlu is not None :\n",
-    "        return \"H线路\"\n",
-    "    elif xlu is  None and scang is not None and mcang is None:\n",
-    "        return \"H单仓\"\n",
-    "    elif xlu is  None and scang is  None and mcang is not None:\n",
-    "        return \"H多仓\"\n",
-    "    else :\n",
-    "        return \"other\"\n",
-    "\n",
-    "def addlink(url): #增加代理链接\n",
-    "    agentlink=\"https://xn--sss604efuw.com/jm/jiemi.php?url=\"\n",
-    "    url1=agentlink+url\n",
-    "    return url1\n",
-    "\n",
-    "def url_respon(url): #输入原始url,解析网站。返回：0-代理url；1-respone等元组；2-状态+200\n",
-    "    headers={\"User-Agent\":\"okhttp/4.1.0\"}\n",
-    "    try:\n",
-    "        respon=requests.get(url,verify=False,timeout =60)\n",
-    "        codema= respon.status_code\n",
-    "        if codema==200:\n",
-    "            conten=\"首次解析状态:\"+str(codema)\n",
-    "            # print(respon.text)\n",
-    "            return url,respon.text,conten\n",
-    "        else:\n",
-    "            respon1=requests.get(url,headers=headers,verify=False,timeout =60)  #更换UA\n",
-    "            codema1= respon1.status_code\n",
-    "            conten1=\"更换UA状态: \"+str(codema1)\n",
-    "            return url,respon1.text,conten1\n",
-    "    except:\n",
-    "        try:\n",
-    "            respon2=requests.get(url=addlink(url),headers=headers,verify=False,timeout =60)  #增加代理2函数\n",
-    "            codema2= respon2.status_code\n",
-    "            conten2=\"代理网址状态: \"+str(codema2)\n",
-    "            return url,respon2.text,conten2\n",
-    "        except:\n",
-    "            return url,\"000\",\"解析失败了: \"\n",
-    "\n",
-    "i=1\n",
-    "# excel_file = r'D:\\OneDrive\\Learn\\pythonLearn\\TvBox\\tvbox\\excel_xianlu.xlsx' #家里路径\n",
-    "excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_xianlu.xlsx' #公司路径\n",
-    "workbook = openpyxl.load_workbook(filename=excel_file)\n",
-    "sheet1= workbook['1120']\n",
-    "for row in sheet1.iter_rows(values_only=True):\n",
-    "    if not (row[1]) is None :\n",
-    "        analysis_respone=url_respon(row[1]) \n",
-    "        strtxt=respon_out(analysis_respone[0]) #返回解析结果,如单仓/多仓/失败\n",
-    "        codetxt=analysis_respone[2]  #返回 url的返回状态 如200，400\n",
-    "        sheet1.cell(row = i,column = 4,value = strtxt)\n",
-    "        sheet1.cell(row = i,column = 5,value = codetxt)\n",
-    "        sheet1.cell(row = i,column = 6,value = analysis_respone[0]) #返回代理链接\n",
-    "        print(strtxt,codetxt,row[1])\n",
-    "    else:\n",
-    "        break\n",
-    "    i=i+1\n",
-    "workbook.save(filename = \"excel_1120.xlsx\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -217,59 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "解析失败了:  000 https://tv.youdu.fan:666\n",
-      "200\n",
-      "解析失败了:  000 https://盒子迷.top/禁止贩卖\n",
-      "解析失败了:  000 https://安卓哥.com\n",
-      "解析失败了:  000 http://fongmi.top\n",
-      "解析失败了:  000 http://接口.tvbox.中国\n",
-      "404\n",
-      "解析失败了:  000 https://盒子迷.top/4K\n",
-      "200\n",
-      "解析失败了:  000 https://盒子迷.top/春盈天下\n",
-      "解析失败了:  000 http://饭太硬.top/tv\n",
-      "200\n",
-      "解析失败了:  000 http://我不是.肥猫.live/接口禁止贩卖\n",
-      "404\n",
-      "解析失败了:  000 https://hezi.tvboxhz.top/dxaw0\n",
-      "解析失败了:  000 https://agit.ai/cyl58/yl/raw/branch/master/ml.json\n",
-      "解析失败了:  000 https://tvbox.meitufu.com/TVBox/tv.json\n",
-      "200\n",
-      "解析失败了:  000 https://www.gitlink.org.cn/api/leevi0321/apps/raw/room.json?ref=main\n",
-      "200\n",
-      "解析失败了:  000 https://mirror.ghproxy.com/https://github.com/hd9211/Tvbox1/blob/main/cr.json\n",
-      "200\n",
-      "解析失败了:  000 https://mirror.ghproxy.com/https://github.com/bizhangjie/CatVodSpider/blob/main/json/index18.json\n",
-      "200\n",
-      "解析失败了:  000 https://mirror.ghproxy.com/https://raw.githubusercontent.com/bizhangjie/CatVodSpider/main/json/index18.json\n",
-      "200\n",
-      "解析失败了:  000 https://mirror.ghproxy.com/https://raw.githubusercontent.com/supermeguo/BoxRes/main/Myuse/catcr.json\n",
-      "200\n",
-      "解析失败了:  000 https://mirror.ghproxy.com/https://raw.githubusercontent.com/aliluya1977/TVBox/c0b8aa099c3f0847d037c169d493cc9172aea7b4/papa.json\n",
-      "200\n",
-      "解析失败了:  000 https://www.gitlink.org.cn/api/wxrj/wx/raw/wx.json?ref=master\n",
-      "解析失败了:  000 https://www.mpanso.com/小米/DEMO.json\n",
-      "解析失败了:  000 http://饭.eu.org/tv\n",
-      "解析失败了:  000 http://fan.xxooo.cf/tv\n",
-      "解析失败了:  000 http://www.饭太硬.com/tv\n",
-      "200\n",
-      "解析失败了:  000 http://fty.xxooo.cf/tv\n",
-      "解析失败了:  000 http://fty.888484.xyz/tv\n",
-      "解析失败了:  000 https://9280.kstore.space/wex.json\n",
-      "200\n",
-      "解析失败了:  000 https://ghp.ci/https://raw.githubusercontent.com/supermeguo/BoxRes/main/Myuse/lemoncr.json\n",
-      "200\n",
-      "解析失败了:  000 https://www.kdocs.cn/l/csxAeSxqNok4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openpyxl\n",
     "import requests\n",
@@ -343,6 +219,96 @@
     "        break\n",
     "    i=i+1\n",
     "workbook.save(filename = \"excel_1120_1.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 20241121 ok \n",
+    "## 从Excel第二列读取链接，判断当前是单仓还是多仓，并把结果写入到Excel文件\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openpyxl\n",
+    "import requests\n",
+    "import json\n",
+    "import re,os\n",
+    "import warnings \n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "def respon_out(respon): #输入respond,判断线路、单仓和多仓\n",
+    "    mcang=re.search(\"storeHouse\",respon,re.M|re.I)\n",
+    "    scang = re.search(\"urls\",respon,re.M|re.I)\n",
+    "    xlu = re.search(\"sites\",respon,re.M|re.I)\n",
+    "    if xlu is not None :\n",
+    "        return \"H线路\"\n",
+    "    elif xlu is  None and scang is not None and mcang is None:\n",
+    "        return \"H单仓\"\n",
+    "    elif xlu is  None and scang is  None and mcang is not None:\n",
+    "        return \"H多仓\"\n",
+    "    else :\n",
+    "        return \"other\"\n",
+    "\n",
+    "def addlink(url): #增加代理链接\n",
+    "    agentlink=\"https://xn--sss604efuw.com/jm/jiemi.php?url=\"\n",
+    "    url1=agentlink+url\n",
+    "    return url1\n",
+    "\n",
+    "def url_respon(url): #输入原始url,解析网站。返回：0-代理url；1-respone等元组；2-状态+200\n",
+    "    headers={\"User-Agent\":\"okhttp/4.1.0\"}\n",
+    "    try:\n",
+    "        respon=requests.get(url,verify=False,timeout =60)\n",
+    "        codema= respon.status_code\n",
+    "        if codema==200:\n",
+    "            if respon_out(respon.text)!='other': #如果解析结果不是other，则返回解析结果\n",
+    "                conten=\"首次解析状态:\"+str(codema)\n",
+    "                outcang=respon_out(respon.text)\n",
+    "                # print(respon.text)\n",
+    "                return url,conten,outcang\n",
+    "            else:\n",
+    "                respon1=requests.get(url,headers=headers,verify=False,timeout =60)  #更换UA\n",
+    "                codema1= respon1.status_code\n",
+    "                conten1=\"更换UA状态: \"+str(codema1)\n",
+    "                outcang1=respon_out(respon1.text)\n",
+    "                return url,conten1,outcang1\n",
+    "        else:\n",
+    "            respon2=requests.get(url=addlink(url),headers=headers,verify=False,timeout =60)  #增加代理2函数\n",
+    "            codema2= respon.status_code\n",
+    "            conten2=\"解析状态: \"+str(codema2)\n",
+    "            outcang2=respon_out(respon2.text)\n",
+    "            return url,conten2,outcang2\n",
+    "    except Exception:\n",
+    "        # print(\"解析失败了!: \",url)\n",
+    "        return url,\"失败状态：000\",\"解析失败: \"\n",
+    "        \n",
+    "def main():\n",
+    "    i=1\n",
+    "    # excel_file = r'D:\\OneDrive\\Learn\\pythonLearn\\TvBox\\tvbox\\excel_xianlu.xlsx' #家里路径\n",
+    "    excel_file = r'D:\\lxd\\learn\\py\\tvbox\\excel_xianlu.xlsx' #公司路径\n",
+    "    workbook = openpyxl.load_workbook(filename=excel_file)\n",
+    "    sheet1= workbook['1120']\n",
+    "    for row in sheet1.iter_rows(values_only=True):\n",
+    "        if not row is None :\n",
+    "            analysis_respone=url_respon(row[1]) \n",
+    "            strtxt=analysis_respone[2] #返回解析结果,如单仓/多仓/失败\n",
+    "            codetxt=analysis_respone[1]  #返回 url的返回状态 如200，400\n",
+    "            sheet1.cell(row = i,column = 4,value = strtxt)\n",
+    "            sheet1.cell(row = i,column = 5,value = codetxt)\n",
+    "            # sheet1.cell(row = i,column = 6,value = analysis_respone[0]) #返回代理链接\n",
+    "            print(strtxt,codetxt,row[1])\n",
+    "        else:\n",
+    "            break\n",
+    "        i=i+1\n",
+    "        workbook.save(filename = \"excel_1121.xlsx\")\n",
+    "        print(\"__\"*100)\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
    ]
   }
  ],
